sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/Staff_Allowances__c.object-meta.xml
<CustomObject>
    <label>Payroll Modification</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Payroll Mod Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Modifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>