sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Allowance_Description__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>