sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Allowance_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Frequency__c</fullName>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>