sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Type__c</fullName>
    <label>Allowance Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airtime Allowance</fullName>
            </value>
            <value>
                <fullName>Meal Allowance</fullName>
            </value>
            <value>
                <fullName>Transport Allowance</fullName>
            </value>
            <value>
                <fullName>Overtime Allowance</fullName>
            </value>
            <value>
                <fullName>Bonus Allowance</fullName>
            </value>
            <value>
                <fullName>Referral Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>