sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Data_Amount__c.field-meta.xml
<CustomField>
    <fullName>Data_Amount__c</fullName>
    <label>Data Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>