sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Department_Unit__c.field-meta.xml
<CustomField>
    <fullName>Department_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Unit</label>
    <referenceTo>Sanergy_Department_Unit__c</referenceTo>
    <relationshipLabel>Payroll Modifications</relationshipLabel>
    <relationshipName>Staff_Allowances</relationshipName>
    <type>Lookup</type>
</CustomField>