sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Dimension_4__c.field-meta.xml
<CustomField>
    <fullName>Dimension_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 4</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim4</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Payroll_Modes</relationshipName>
    <type>Lookup</type>
</CustomField>