sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Last_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_Date__c</fullName>
    <label>Last Approval Date</label>
    <type>Date</type>
</CustomField>