sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Last Verified Date</label>
    <type>Date</type>
</CustomField>