sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Sanergy_Department__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sanergy Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipName>Staff_Allowances</relationshipName>
    <type>Lookup</type>
</CustomField>