sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/fields/Voice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voice_Amount__c</fullName>
    <label>Voice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>