sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/recordTypes/Payroll_Addition.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Addition</fullName>
    <active>true</active>
    <label>Payroll Addition</label>
</RecordType>