sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/recordTypes/Payroll_Deduction.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Deduction</fullName>
    <active>true</active>
    <description>Payroll Deduction</description>
    <label>Payroll Deduction</label>
</RecordType>