sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Allowance_Frequency__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Allowance_Amount__c</columns>
    <columns>isActive__c</columns>
    <columns>Verified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>