sfSandBoxCode/force-app/main/default/objects/Staff_Allowances__c/listViews/All_Active_Payroll_Deduction.listView-meta.xml
<ListView>
    <fullName>All_Active_Payroll_Deduction</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Allowance_Frequency__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Allowance_Amount__c</columns>
    <columns>isActive__c</columns>
    <columns>Verified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>012D0000000caMR</value>
    </filters>
    <label>All Active - Payroll Deduction</label>
    <language>en_US</language>
</ListView>